log
ju.,  7 de abr. de 2022 12:42:37: 
 hashmap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:64:24: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     nuevoMapa->current = NULL;
                        ^
cc1.exe: all warnings being treated as errors
Compilation failed
7d7022e
ju.,  7 de abr. de 2022 12:43:14: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
27b3724
ju.,  7 de abr. de 2022 12:45:31: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a4a988f
ju.,  7 de abr. de 2022 12:49:11: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
c2090c3
ju.,  7 de abr. de 2022 12:50:57: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
922ce9a
ju.,  7 de abr. de 2022 12:52:13: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
ce3deaf
ju.,  7 de abr. de 2022 12:52:41: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b3f6256
ju.,  7 de abr. de 2022 12:55:39: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25409d7
ju.,  7 de abr. de 2022 13:07:04: 
 hashmap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
c58684d
ju.,  7 de abr. de 2022 13:07:52: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
692d84f
ju.,  7 de abr. de 2022 13:08:35: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
c1a36e2
vi.,  8 de abr. de 2022 16:28:21: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
8e32de0
vi.,  8 de abr. de 2022 16:42:24: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  8|3
total_score: 40/70
763bf87
vi.,  8 de abr. de 2022 18:21:01: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
29b7786
vi.,  8 de abr. de 2022 18:32:09: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
f00f1f1
vi.,  8 de abr. de 2022 18:32:52: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|3
total_score: 40/70
49b49e1
vi.,  8 de abr. de 2022 18:34:07: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
eea62ac
vi.,  8 de abr. de 2022 18:34:37: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|3
total_score: 40/70
3537bfc
vi.,  8 de abr. de 2022 18:38:49: 
 hashmap.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  10|3
total_score: 40/70
0052132
vi.,  8 de abr. de 2022 18:40:01: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|3
total_score: 40/70
b327ae8
vi.,  8 de abr. de 2022 18:41:12: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4b46196
vi.,  8 de abr. de 2022 18:43:13: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  10|3
total_score: 40/70
90039dc
vi.,  8 de abr. de 2022 18:45:18: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
02bc34d
